# qr_scan

./: Cargo.toml  README.md  tauri.conf.json
src/: main.rs
ui/: index.html  main.js  styles.css
